Reorganize docs around interactive demos; add Vite bundling and Chekhov E2E
- Replace the InteractiveExamples registry with six per-page demo
  components: Counter, Components, ElementDsl, Overview, Styling, Todo
- Vite pipeline: docsClient/fastLinkJS -> docs/client/main.js
  (gitignored, regenerated each build) -> vite build ->
  target/site/assets/client.js
- New docs suites: Mounting, ConduitIntegration, and TodoDemoSpec
  (Chekhov/Playwright E2E against the served site, 6 tests)
- docsDev alias: DocsServe on 8765 + ~docs/specularSite with
  dev-stamp polling for live reload
- Chekhov: root package.json pins the Playwright CLI; docs tests fork
  with PLAYWRIGHT_DRIVER_CLI pointed at the repo-local CLI
- Re-assert Test / fork := false on the four Scala.js projects:
  ChekhovPlugin auto-enables everywhere and forces fork := true,
  which breaks Scala.js test tasks
- scalafmt: classic if syntax in .sbt files (scala213source3), and
  scalafmtAll across the repo - main was not clean under 3.7.15
- .gitignore: docs/client/main.js, .playwright-mcp/, *.semanticdb, *.png