@@ -1,4 +1,5 @@
 import org.scalajs.linker.interface.ModuleSplitStyle
+import scala.sys.process._
 
 // CI-only publishing: the signing key hex comes from the PGP_KEY_HEX env var (an early-effect
 // org secret). Local builds use a sentinel that keeps the build loadable but fails signing loudly.
@@ -6,7 +7,8 @@ usePgpKeyHex(sys.env.getOrElse("PGP_KEY_HEX", "MISSING_KEY_HEX"))
 
 val scala3Version   = "3.8.4"
 val zioVersion      = "2.1.26"
-val specularVersion = "0.11.0"
+val specularVersion = "0.12.0"
+val chekhovVersion  = "0.0.2"
 
 ThisBuild / scalaVersion := scala3Version
 
@@ -20,6 +22,14 @@ zipxCapabilities += Capability.test.copy(needsCapabilities = List(Fmt))
 zipxCapabilities += ZipxCentral.release
 zipxCapabilities += ZipxDocs.pages(sbtProject = "docs")
 zipxWorkflowDispatch := true
+
+/** Dev loop: build site (fastLink client + vite + HTML), start DocsServe once, then watch-rebuild. DocsServe is a
+  * static file server on target/site; it does not need restarts when assets change. Watch tracks docs + docsClient via
+  * specularSite → specularJsLink → docsClient/fastLinkJS. After each rebuild, BuildSite writes assets/dev-stamp; the
+  * client live-reloads on localhost. Open http://127.0.0.1:8765 — Enter exits watch (server bg job stops when sbt
+  * exits).
+  */
+addCommandAlias("docsDev", "; docs/Test/runReload; ~docs/specularSite")
 
 ThisBuild / scalacOptions ++= Seq(
   "-deprecation",
@@ -35,8 +45,8 @@ publishTo := {
   if (isSnapshot.value) Some("central-snapshots" at centralSnapshots)
   else localStaging.value
 }
-publishMavenStyle    := true
-pomIncludeRepository := { _ => false }
+publishMavenStyle                := true
+pomIncludeRepository             := { _ => false }
 ThisBuild / licenses             := List("Apache-2.0" -> url("http://www.apache.org/licenses/LICENSE-2.0.txt"))
 ThisBuild / homepage             := Some(url("https://github.com/early-effect/preactile"))
 ThisBuild / organization         := "rocks.earlyeffect"
@@ -70,6 +80,9 @@ lazy val core = project
   .enablePlugins(ScalaJSPlugin)
   .settings(
     name := "preactile",
+    // ChekhovPlugin (allRequirements) sets `Test / fork := true` on every project; Scala.js
+    // `test` tasks require fork := false. Re-asserted on each Scala.js project in this build.
+    Test / fork := false,
     // Preact is imported via @JSImport("preact") — consumers must include it in their npm deps.
     // JSDOMNodeJSEnv vendored in project/JSDOMNodeJSEnv.scala (scalajs-env-jsdom-nodejs has no sbt 2 artifact).
     Test / jsEnv := Def.uncached { new org.scalajs.jsenv.jsdomnodejs.JSDOMNodeJSEnv() },
@@ -90,7 +103,8 @@ lazy val preactileConduit = project
   .enablePlugins(ScalaJSPlugin)
   .dependsOn(core)
   .settings(
-    name := "preactile-conduit",
+    name        := "preactile-conduit",
+    Test / fork := false, // ChekhovPlugin forces fork := true; Scala.js tests must not fork
     libraryDependencies ++= Seq(
       "io.github.russwyte" %% "conduit"              % "0.0.6",
       "io.github.cquiroz"  %% "scala-java-time"      % "2.7.0",
@@ -106,30 +120,74 @@ lazy val docs = project
   .enablePlugins(SpecularPlugin)
   .disablePlugins(ScalaJSPlugin)
   .settings(
-    name := "preactile-docs",
+    name           := "preactile-docs",
     publish / skip := true,
     libraryDependencies ++= Seq(
       "rocks.earlyeffect" %% "specular-core"           % specularVersion % Test,
       "rocks.earlyeffect" %% "specular-zio-test"       % specularVersion % Test,
       "rocks.earlyeffect" %% "specular-site"           % specularVersion % Test,
       "rocks.earlyeffect" %% "early-effect-docs-theme" % specularVersion % Test,
+      // Chekhov for E2E tests against the served docs site.
+      "rocks.earlyeffect" %% "chekhov-zio-test" % chekhovVersion % Test,
+      "rocks.earlyeffect" %% "chekhov-driver"   % chekhovVersion % Test,
     ),
-    specularMetaProject := Some(LocalProject("core")),
-    specularArtifactKind := "library",
-    specularBuildMain := "preactile.docs.BuildSite",
-    // Link the JS client bundle and write a marker path BuildSite copies into assets/client.js.
+    // Chekhov depends on zio-json 0.10.x; specular-site pulls in zio-schema-json (0.9.x).
+    dependencyOverrides += "dev.zio" %% "zio-json" % "0.10.0",
+    specularMetaProject              := Some(LocalProject("core")),
+    specularArtifactKind             := "library",
+    specularBuildMain                := "preactile.docs.BuildSite",
+    specularSiteDirectory            := (ThisBuild / baseDirectory).value / "target" / "site",
+    // Link JS client and bundle with Vite so bare module specifiers (preact) resolve in browser.
     specularJsLink := Def.uncached {
+      val log = streams.value.log
       (docsClient / Compile / fastLinkJS).value
-      val outDir = (docsClient / Compile / fastLinkJSOutput).value
-      val mainJs = outDir / "main.js"
-      if !mainJs.exists then
-        sys.error(
-          s"Expected $mainJs after fastLinkJS; directory contains: " +
-            Option(outDir.list).toSeq.flatten.mkString(", ")
-        )
-      val marker = (ThisBuild / baseDirectory).value / "target" / "specular-client-js.path"
-      IO.write(marker, mainJs.getAbsolutePath)
-      ()
+
+      val baseDir = (ThisBuild / baseDirectory).value
+      val viteDir = baseDir / "docs" / "client"
+
+      // Copy ScalaJS output to docs/client/main.js for Vite to bundle.
+      val mainJs = (docsClient / Compile / fastLinkJSOutput).value / "main.js"
+      IO.copyFile(mainJs, viteDir / "main.js")
+
+      def runNpm(cmd: String): Unit = {
+        log.info(s"$cmd")
+        val exit = Process(cmd, viteDir).!
+        if (exit != 0) sys.error(s"$cmd failed with exit code $exit")
+      }
+
+      // Ensure node_modules exists.
+      if (!(viteDir / "node_modules").exists) runNpm("npm install")
+
+      // Bundle with Vite.
+      runNpm("npm run build")
+
+      // Verify bundled output exists.
+      val bundledJs = baseDir / "target" / "site" / "assets" / "client.js"
+      if (!bundledJs.exists) sys.error(s"Bundled JS not found: $bundledJs")
+    },
+    // Preview: DocsServe serves target/site as static files (no restart needed on rebuild).
+    // `docsDev` starts it once, then `~docs/specularSite` rebuilds in place; client polls dev-stamp.
+    Test / mainClass       := Some("specular.site.DocsServe"),
+    Test / run / mainClass := Some("specular.site.DocsServe"),
+    run / fork             := true,
+    run / javaOptions ++= Seq(
+      "--sun-misc-unsafe-memory-access=allow",
+      "--enable-native-access=ALL-UNNAMED",
+    ),
+    Test / runReloadArgs := {
+      val siteDir = specularSiteDirectory.value
+      Seq("8765", siteDir.getAbsolutePath)
+    },
+    // One-shot start: ensure client JS + site exist before forking DocsServe.
+    // (specularSite already depends on specularJsLink → docsClient/fastLinkJS.)
+    Test / runReload := (Test / runReload).dependsOn(specularSite).value,
+    // Chekhov E2E tests: fork so envVars are honored and Playwright driver can spawn.
+    Test / fork := true,
+    Test / envVars ++= {
+      val baseDir = (ThisBuild / baseDirectory).value
+      Map(
+        "PLAYWRIGHT_DRIVER_CLI" -> (baseDir / "node_modules" / "playwright" / "cli.js").getAbsolutePath
+      )
     },
   )
 
@@ -137,11 +195,15 @@ lazy val docs = project
 lazy val docsClient = project
   .in(file("docs/client"))
   .enablePlugins(ScalaJSPlugin)
-  .dependsOn(core)
+  .dependsOn(core, preactileConduit)
   .settings(
-    name := "preactile-docs-client",
+    name           := "preactile-docs-client",
+    Test / fork    := false, // ChekhovPlugin forces fork := true; Scala.js tests must not fork
     publish / skip := true,
-    libraryDependencies += "dev.zio" %% "zio" % zioVersion,
+    libraryDependencies ++= Seq(
+      "dev.zio"           %% "zio"           % zioVersion,
+      "rocks.earlyeffect" %% "specular-core" % specularVersion,
+    ),
     scalaJSUseMainModuleInitializer := true,
     scalaJSLinkerConfig ~= { _.withModuleKind(ModuleKind.ESModule) },
     Compile / mainClass := Some("preactile.docs.ClientMain"),
@@ -153,6 +215,7 @@ lazy val example = project
   .dependsOn(core, preactileConduit)
   .settings(
     name                            := "preactile-example",
+    Test / fork                     := false, // ChekhovPlugin forces fork := true; Scala.js tests must not fork
     publish / skip                  := true,
     test / skip                     := true,
     scalaJSUseMainModuleInitializer := true,
